--- a/bakhroush_custom_report/views/data.xml
+++ b/bakhroush_custom_report/views/data.xml
@@ -25,6 +25,10 @@
         <field name="name">Allow Return</field>
         <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
     </record>
+    <record id="group_allow_validate_transer" model="res.groups">
+        <field name="name">Allow to Validate Transfers with No Credit</field>
+        <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
+    </record>
     <record model="ir.rule" id="stock.stock_picking_rule">
         <field name="name">stock_picking multi-company</field>
         <field name="model_id" search="[('model','=','stock.picking')]" model="ir.model"/>
